# drone

./: .gitignore  Cargo.toml  copperconfig.ron
.flox/: env.json
.flox/env/: manifest.toml
components/common/msp_lib/: Cargo.toml
components/common/msp_lib/src/: structs.rs
components/sinks/msp_sink/: Cargo.toml
components/sinks/msp_sink/src/: lib.rs
components/sources/msp_src/: Cargo.toml
components/sources/msp_src/src/: lib.rs
core/drone/: Cargo.toml  copperconfig.ron
core/drone/src/tasks/: drone_control.rs
src/: main.rs
src/tasks/: drone_control.rs  mod.rs
