[package]
name = "drone"
version = "0.1.0"
edition = "2021"
default-run = "drone"


# The main executable of your application
[[bin]]
name = "drone"
path = "src/main.rs"

# A custom made log reader application for your application.
[[bin]]
name = "drone-logreader"
path = "src/logreader.rs"
required-features = ["logreader"]

[features]
default = []
logreader = ["dep:cu29-export"]

[dependencies]
cu29 = {  version = "*"  }
bincode = { version = "2.0.1", features = ["derive"] }
cu29-helpers = { version = "*"  }
cu29-export = { version = "*" , optional = true }

cu-msp-src = { version = "*" }
cu-msp-sink = { version = "*" }
cu-msp-lib = { version = "*" }