[package]
name = "msp-sink"
description = "This is the sink side of an MSP (Multiwii Serial Protocol)."
edition = "2021"

[dependencies]
cu29 = { workspace = true }
smallvec = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
serialport = "4.7.2"
msp-lib = { path = "../../common/msp_lib" }
msp-src = { path = "../../sources/msp_src" }  # Keep
