[package]
name = "msp-src"
description = "This is the source side of an MSP (Multiwii Serial Protocol)."
edition = "2021"

[dependencies]
cu29 = { workspace = true }
msp-lib = { path = "../../common/msp_lib" }
serialport = "4.7.2"
serde = { workspace = true }
smallvec = { workspace = true }
bincode = { workspace = true }

